--- a/app/styles.css
+++ b/app/styles.css
@@ -14,6 +14,7 @@ img {
   vertical-align:bottom; /* set vertical align to bottom for IE */
 }
 
+/* Table */
 table {
   text-align: center; 
 }
@@ -138,6 +139,61 @@ tr:hover .grey-btn-hover{
   background: #FFF;
   padding: 10px;
 }
+
+/* Modal */
+.modal-content {
+  background: #F9F7ED !important;
+}
+
+.modal-title {
+  font-family: Work Sans !important;
+}
+
+.btn-modak {
+  font-family: Modak !important;
+  color: #fff;
+}
+
+.modal-header {
+  border-bottom: none !important;
+}
+
+.modal-body {
+  border-bottom: none !important;
+}
+
+.modal-footer {
+  border-top: none !important;
+}
+
+.disclaimer-check {
+  font-family: Roboto Serif !important;
+  color: #000 !important;
+}
+
+#fee-recipient {
+  padding: 10px;
+  border-radius: 10px;
+  background: var(--Buttons-CTAs, #B84B9A);
+  color: white;
+  font-family: Cherry Bomb !important;
+  cursor: pointer;
+}
+
+.subscriber-box {
+  border-radius: 15px;
+  border: 3px solid rgba(95, 95, 95, 0.50);
+  background: #FFF;
+  color: #5F5F5F;
+  font-family: Cherry Bomb !important;
+}
+
+.disclaimer {
+  font-family: Roboto Serif !important;
+  color: #5F5F5F;
+}
+
+/* Global */
 
 .title {
   color: #5F5F5F;
