--- a/app/styles.css
+++ b/app/styles.css
@@ -46,8 +46,7 @@ td:last-child {
 }
 
 .table-responsive {
-  max-height: 400px;
-  min-height: 300px;
+  height: 400px;
 }
 
 td:nth-child(2) {
@@ -160,7 +159,7 @@ tr:hover .grey-btn-hover{
 #fee-recipient {
   padding: 10px;
   border-radius: 10px;
-  background: var(--Buttons-CTAs, #B84B9A);
+  background: var(--Buttons-CTAs, #FC8DBB);
   color: white;
   font-family: Lato !important;
   cursor: pointer;
